[metadata]
name = AutoTester
author = XuQing
description = Tools for generating and managing automated test scripts
long_description = file: README.md
long_description_content_type = text/x-markdown

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8

[options.packages.find]
where = src

